Fix Helm chart settings in CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -499,24 +499,23 @@ jobs:
             --set fullnameOverride=meerkat-test \
             --set service.type=LoadBalancer \
             --set adminService.type=LoadBalancer \
-            --set log.level=debug \
-            --set "myAccessPointNSAPs={idm://dsa01.test.${{ env.ZONE }}:4632,ldap://dsa01.test.${{ env.ZONE }}:389}" \
-            --set chaining.minAuthLevel=0 \
-            --set chaining.minAuthLocalQualifier=0 \
-            --set chaining.tlsOptional=true \
-            --set chaining.prohibited=false \
-            --set ob.minAuthLevel=0 \
-            --set ob.minAuthLocalQualifier=0 \
-            --set ob.autoAccept=true \
-            --set databaseReset=true \
+            --set log_level=debug \
+            --set "my_access_point_nsaps={idm://dsa01.test.${{ env.ZONE }}:4632,ldap://dsa01.test.${{ env.ZONE }}:389}" \
+            --set min_auth_level_for_chaining=0 \
+            --set min_auth_local_qualifier_for_chaining=0 \
+            --set chaining_tls_optional=true \
+            --set prohibit_chaining=false \
+            --set min_auth_level_for_ob=0 \
+            --set min_auth_local_qualifier_for_ob=0 \
+            --set ob_auto_accept=true \
             --set dangerouslyExposeWebAdmin=true \
             --set databaseSecretName=meerkat-test-db \
             --set signingSecretName=meerkat-test-signing \
             --set tlsSecretName=meerkat-test-tls \
-            --set openTopLevel=true \
-            --set maxConnections=100 \
-            --set maxConnectionsPerAddress=50 \
-            --set maxConcurrentOperationsPerConnection=50 \
+            --set open_top_level=true \
+            --set max_connections=100 \
+            --set max_connections_per_address=50 \
+            --set max_concurrent_operations_per_connection=50 \
             --atomic \
             --namespace=${{ env.NAMESPACE }}
       - name: Wait 30 Seconds for Public IP to be Allocated
@@ -695,21 +694,21 @@ jobs:
             --set fullnameOverride=meerkat-${{ matrix.dmd }} \
             --set service.type=LoadBalancer \
             --set adminService.type=LoadBalancer \
-            --set log.level=debug \
-            --set "myAccessPointNSAPs={idms://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:44632,idm://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:4632,ldaps://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:636,ldap://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:389}" \
-            --set chaining.minAuthLevel=0 \
-            --set chaining.minAuthLocalQualifier=0 \
-            --set chaining.tlsOptional=true \
-            --set chaining.prohibited=false \
-            --set ob.minAuthLevel=0 \
-            --set ob.minAuthLocalQualifier=0 \
-            --set ob.autoAccept=true \
-            --set databaseReset=true \
+            --set log_level=debug \
+            --set "my_access_point_nsaps={idms://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:44632,idm://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:4632,ldaps://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:636,ldap://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:389}" \
+            --set min_auth_level_for_chaining=0 \
+            --set min_auth_local_qualifier_for_chaining=0 \
+            --set chaining_tls_optional=true \
+            --set prohibit_chaining=false \
+            --set min_auth_level_for_ob=0 \
+            --set min_auth_local_qualifier_for_ob=0 \
+            --set ob_auto_accept=true \
             --set dangerouslyExposeWebAdmin=true \
             --set databaseSecretName=meerkat-${{ matrix.dmd }}-db \
             --set signingSecretName=meerkat-${{ matrix.dmd }}-signing \
             --set tlsSecretName=meerkat-${{ matrix.dmd }}-tls \
             --set tlsCaConfigName=${{ env.DEMO_TRUST_ANCHOR_CONFIG_NAME }} \
+            --set web_admin_use_tls=false \
             --atomic \
             --namespace=${{ env.NAMESPACE }}
       - name: Wait 30 Seconds for Public IP to be Allocated
