--- a/.env
+++ b/.env
@@ -73,3 +73,4 @@ LANG=en_US.utf8
 MEERKAT_TEST_TELEMETRY=1 # Undocumented.
 MEERKAT_CHAINING_TLS_OPTIONAL=1
 MEERKAT_OB_AUTO_ACCEPT=0
+NODE_OPTIONS=--stack-trace-limit=100
