--- a/apps/meerkat/tsconfig.spec.json
+++ b/apps/meerkat/tsconfig.spec.json
@@ -1,11 +1,11 @@
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["jest", "node"],
-    "esModuleInterop": true,
-    "resolveJsonModule": true
-  },
-  "include": ["**/*.spec.ts", "**/*.d.ts"]
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "outDir": "../../dist/out-tsc",
+        "module": "commonjs",
+        "types": ["jest", "node"],
+        "esModuleInterop": true,
+        "resolveJsonModule": true
+    },
+    "include": ["**/*.spec.ts", "**/*.d.ts", "jest.config.ts"]
 }
