--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@wildboar/tal": "^1.0.6",
     "@wildboar/x400": "^1.0.4",
     "@wildboar/x500": "^1.0.51",
+    "@wildboar/x700": "^1.0.3",
     "applicationinsights": "^2.3.4",
     "applicationinsights-native-metrics": "^0.0.7",
     "asn1-ts": "^7.0.9",
