--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "applicationinsights-native-metrics": "^0.0.7",
     "asn1-ts": "^7.0.9",
     "basic-ftp": "^5.0.1",
+    "bluebird": "^3.7.2",
     "chalk": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -98,6 +99,7 @@
     "@nrwl/workspace": "14.5.4",
     "@nx-go/nx-go": "^2.6.0",
     "@nx-plus/docusaurus": "^14.1.0",
+    "@types/bluebird": "^3.5.36",
     "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
     "@types/escape-html": "^1.0.2",
