--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@wildboar/cms": "^1.0.4",
     "@wildboar/ldap": "^1.2.11",
     "@wildboar/ocsp": "^1.0.5",
+    "@wildboar/pc": "^1.0.4",
     "@wildboar/pkcs": "^1.0.5",
     "@wildboar/pki-stub": "^1.1.3",
     "@wildboar/safecurves-pkix-18": "^1.0.6",
