--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -8,7 +8,7 @@ data:
   {{- if .Values.administrator_email }}
   administrator_email: {{ .Values.administrator_email }}
   {{- end }}
-  administrator_email_public: {{ .Values.administrator_email_public | ternary 1 0 | quote }}
+  administrator_email_public: {{ .Values.administrator_email_public | default false | ternary 1 0 | quote }}
   bind_min_sleep_ms: {{ .Values.bind_min_sleep_ms | default 1000 | quote }}
   bind_sleep_range_ms: {{ .Values.bind_sleep_range_ms | default 3000 | quote }}
   bulk_insert_mode: {{ .Values.bulk_insert_mode | ternary 1 0 | quote }}
