--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -16,6 +16,7 @@ data:
   client_cert_engine: {{ .Values.client_cert_engine }}
   {{- end }}
   chaining_tls_optional: {{ .Values.chaining_tls_optional | ternary 1 0 | quote }}
+  default_entry_ttl: {{ .Values.default_entry_ttl | default "60" | quote }}
   enable_dop: {{ .Values.enable_dop | ternary 1 0 | quote }}
   enable_dsp: {{ .Values.enable_dsp | ternary 1 0 | quote }}
   {{- if .Values.ecdh_curves }}
