--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -107,6 +107,7 @@ bind_sleep_range_ms: 3000
 bulk_insert_mode: false
 # client_cert_engine: pkcs11
 chaining_tls_optional: false
+default_entry_ttl: 60
 # ecdh_curves: P-521:P-384:P-256
 enable_dap: true
 enable_dop: false
