--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -719,6 +719,7 @@ jobs:
             --set administrator_email=jonathan@wilbur.space \
             --set administrator_email_public=true \
             --set vendor_version='1.3.0' \
+            --set signing_required_for_chaining=false \
             --atomic \
             --namespace=${{ env.NAMESPACE }}
       - name: Wait 30 Seconds for Public IP to be Allocated
