--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -15,6 +15,8 @@ data:
   {{- if .Values.client_cert_engine }}
   client_cert_engine: {{ .Values.client_cert_engine }}
   {{- end }}
+  chaining_check_sig: {{ .Values.chaining_check_sig | default true | ternary 1 0 | quote }}
+  chaining_sign_request: {{ .Values.chaining_sign_request | default true | ternary 1 0 | quote }}
   chaining_tls_optional: {{ .Values.chaining_tls_optional | ternary 1 0 | quote }}
   default_entry_ttl: {{ .Values.default_entry_ttl | default "60" | quote }}
   enable_dop: {{ .Values.enable_dop | ternary 1 0 | quote }}
