--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -1,10 +1,10 @@
-name: Main Workflow
+name: Meerkat DSA Workflow
 
 on:
   push:
-    branches:
-      - main
-      - master
+    tags:        
+      - v2.*
+      - v1.*
 
 env:
   CLUSTER_NAME: production
@@ -194,31 +194,6 @@ jobs:
           tags: ghcr.io/wildboar-software/meerkat-dsa:latest,ghcr.io/wildboar-software/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }}
           context: ./
           file: ./meerkat.dockerfile
-
-  build_x500_cli:
-    name: Build the X.500 CLI
-    runs-on: ubuntu-latest
-    needs:
-      - publish_libs
-    environment: production
-    strategy:
-      fail-fast: false
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '17'
-      - name: Install NPM Packages
-        run: npm ci
-      - name: Compile the X.500 CLI
-        run: npx nx run x500-cli:build:production --skip-nx-cache
-      - name: Publish NPM Package
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          package: ./dist/apps/x500-cli/package.json
-          token: ${{ secrets.NPM_TOKEN }}
 
   # HOW DOES THIS EVEN WORK?
   # There is no point in this job where it installs Helm, but yet, somehow, this
@@ -813,40 +788,3 @@ jobs:
       - name: Run the functional tests
         run: npx nx run x500-functional-tests:test --skip-nx-cache
         timeout-minutes: 10
-
-  # Pretty much copied from here: https://docusaurus.io/docs/deployment#deploying-to-github-pages
-  deploy_docs:
-    name: Deploy Documentation
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '17'
-      - name: Install NPM Packages
-        run: npm ci
-      - name: Compile Documentation
-        run: npx nx run meerkat-docs:build --skip-nx-cache
-
-      # Popular action to deploy to GitHub Pages:
-      # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          # Build output to publish to the `gh-pages` branch:
-          publish_dir: ./dist/apps/meerkat-docs
-          # The following lines assign commit authorship to the official
-          # GH-Actions bot for deploys to `gh-pages` branch:
-          # https://github.com/actions/checkout/issues/13#issuecomment-724415212
-          # The GH actions bot is used by default if you didn't specify the two fields.
-          # You can swap them out with your own user credentials.
-          user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com
-
-# TODO: Publish GitHub Release
-# TODO: Publish message to Matrix chat? (Looks unclear how to do this.)
-# TODO: Create a Debian Package
-# TODO: Upload artifacts
