--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "safe-timers": "1.1.0",
     "semver": "^7.3.7",
     "swagger-ui-express": "^4.5.0",
+    "tiny-typed-emitter": "^2.1.0",
     "tslib": "^2.4.0",
     "winston": "^3.8.1",
     "yargs": "^17.5.1"
