--- a/.env
+++ b/.env
@@ -74,3 +74,4 @@ MEERKAT_TEST_TELEMETRY=1 # Undocumented.
 MEERKAT_CHAINING_TLS_OPTIONAL=1
 MEERKAT_OB_AUTO_ACCEPT=0
 NODE_OPTIONS=--stack-trace-limit=100
+MEERKAT_LOG_BOUND_DN=1
