--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -132,6 +132,7 @@ local_qualifier_points_for_using_tls_1_0: 32
 local_qualifier_points_for_using_tls_1_1: 64
 local_qualifier_points_for_using_tls_1_2: 128
 local_qualifier_points_for_using_tls_1_3: 256
+log_bound_dn: false
 # log_file: /var/log/meerkat.log
 # log_file_max_files: 100
 # log_file_max_size: "1000000"
