--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/terminus": "^9.1.0",
     "@prisma/client": "^4.1.1",
     "@wildboar/cms": "^1.0.4",
+    "@wildboar/copp": "^1.0.2",
     "@wildboar/ldap": "^1.2.11",
     "@wildboar/ocsp": "^1.0.5",
     "@wildboar/pc": "^1.0.4",
