--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,10 +18,10 @@
         "paths": {
             "@wildboar/idm": ["libs/idm/src/index.ts"],
             "@wildboar/itu-schema": ["libs/itu-schema/src/index.ts"],
-            "@wildboar/itot": ["libs/itot/src/index.ts"],
             "@wildboar/ldap-socket": ["libs/ldap-socket/src/index.ts"],
             "@wildboar/meerkat-types": ["libs/meerkat-types/src/index.ts"],
             "@wildboar/ocsp-client": ["libs/ocsp-client/src/index.ts"],
+            "@wildboar/osi-net": ["libs/osi-net/src/index.ts"],
             "@wildboar/parity-schema/*": ["libs/parity-schema/*"],
             "@wildboar/x500-cli-config": ["libs/x500-cli-config/src/index.ts"],
             "x500-functional-tests": ["libs/x500-functional-tests/src/index.ts"]
