Get ITOT working in server

--- a/.env
+++ b/.env
@@ -75,3 +75,9 @@ MEERKAT_CHAINING_TLS_OPTIONAL=1
 MEERKAT_OB_AUTO_ACCEPT=0
 NODE_OPTIONS=--stack-trace-limit=100
 MEERKAT_LOG_BOUND_DN=1
+MEERKAT_ITOT_PORT=1102
+MEERKAT_ITOT_ABORT_TIMEOUT_IN_SECONDS=3
+MEERKAT_ITOT_TSDU_BUFFER_SIZE=10_000_000
+MEERKAT_ITOT_SSDU_BUFFER_SIZE=10_000_000
+MEERKAT_ITOT_MAX_PRESENTATION_CONTEXTS=10
+MEERKAT_ITOT_ACSE_PASSWORD=asdf
