--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,7 @@
             "@wildboar/parity-schema/*": ["libs/parity-schema/*"],
             "@wildboar/rose-transport": ["libs/rose-transport/src/index.ts"],
             "@wildboar/x500-cli-config": ["libs/x500-cli-config/src/index.ts"],
+            "@wildboar/x500-client-ts": ["libs/x500-client-ts/src/index.ts"],
             "x500-functional-tests": ["libs/x500-functional-tests/src/index.ts"]
         }
     },
