--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -32,6 +32,22 @@ data:
   idm_port: {{ .Values.idm_port | default 4632 | quote }}
   idms_port: {{ .Values.idms_port | default 44632 | quote }}
   # init_js: use initJsConfigName
+  {{- if .Values.itot_port }}
+  itot_port: {{ .Values.itot_port | quote }}
+  {{- end }}
+  {{- if .Values.itots_port }}
+  itots_port: {{ .Values.itots_port | quote }}
+  {{- end }}
+  itot_abort_timeout_in_seconds: {{ .Values.itot_abort_timeout_in_seconds | quote }}
+  itot_max_nsdu_size: {{ .Values.itot_max_nsdu_size | quote }}
+  itot_max_tpdu_size: {{ .Values.itot_max_tpdu_size | quote }}
+  itot_max_tsdu_size: {{ .Values.itot_max_tsdu_size | quote }}
+  itot_max_ssdu_size: {{ .Values.itot_max_ssdu_size | quote }}
+  itot_max_presentation_contexts: {{ .Values.itot_max_presentation_contexts | quote }}
+  {{- if .Values.itot_acse_password }}
+  itot_acse_password: {{ .Values.itot_acse_password | quote }}
+  {{- end }}
+  disable_itot_chaining: {{ .Values.disable_itot_chaining | ternary 1 0 | quote }}
   lcr_parallelism: {{ .Values.lcr_parallelism | default 0 | quote }}
   ldap_buffer_size: {{ .Values.ldap_buffer_size | default "1000000" | quote }}
   ldap_port: {{ .Values.ldap_port | default 389 | quote }}
