--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
   },
   "private": true,
   "dependencies": {
-    "@docusaurus/core": "2.0.1",
-    "@docusaurus/plugin-pwa": "2.0.1",
-    "@docusaurus/preset-classic": "2.0.1",
-    "@mdx-js/react": "^1.6.21",
-    "@nestjs/common": "^9.0.8",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/plugin-pwa": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@mdx-js/react": "^1.6.22",
+    "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.8",
-    "@nestjs/platform-express": "^9.0.8",
-    "@nestjs/swagger": "^6.0.5",
-    "@nestjs/terminus": "^9.1.0",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/swagger": "^6.1.3",
+    "@nestjs/terminus": "^9.1.4",
     "@prisma/client": "^4.7.0",
     "@wildboar/acse": "^1.0.6",
     "@wildboar/cms": "^1.0.4",
-    "@wildboar/copp": "^1.0.2",
+    "@wildboar/copp": "^1.0.3",
     "@wildboar/ldap": "^1.2.11",
     "@wildboar/ocsp": "^1.0.5",
     "@wildboar/pc": "^1.0.4",
@@ -53,20 +53,19 @@
     "@wildboar/tal": "^1.0.6",
     "@wildboar/x400": "^1.0.4",
     "@wildboar/x500": "^1.0.55",
-    "@wildboar/x700": "^1.0.3",
-    "applicationinsights": "^2.3.4",
-    "applicationinsights-native-metrics": "^0.0.7",
-    "asn1-ts": "^7.0.16",
-    "basic-ftp": "^5.0.1",
+    "@wildboar/x700": "^1.0.4",
+    "applicationinsights": "^2.3.6",
+    "asn1-ts": "^7.0.17",
+    "basic-ftp": "^5.0.2",
     "bluebird": "^3.7.2",
-    "chalk": "^5.0.1",
+    "chalk": "^5.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "clsx": "^1.2.1",
-    "commander": "^9.4.0",
+    "commander": "^9.4.1",
     "cookie-parser": "1.4.6",
     "csurf": "1.11.0",
-    "date-fns": "^2.29.1",
+    "date-fns": "^2.29.3",
     "email-addresses": "^5.0.0",
     "escape-html": "^1.0.3",
     "fast-levenshtein": "^3.0.0",
@@ -79,7 +78,7 @@
     "lodash": "^4.17.21",
     "os-locale": "^5.0.0",
     "pem-ts": "^3.0.1",
-    "phone": "^3.1.24",
+    "phone": "^3.1.30",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -90,11 +89,11 @@
     "swagger-ui-express": "^4.5.0",
     "tiny-typed-emitter": "^2.1.0",
     "tslib": "^2.4.0",
-    "winston": "^3.8.1",
-    "yargs": "^17.5.1"
+    "winston": "^3.8.2",
+    "yargs": "^17.6.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1",
+    "@docusaurus/module-type-aliases": "2.2.0",
     "@nrwl/cli": "14.5.4",
     "@nrwl/eslint-plugin-nx": "14.5.4",
     "@nrwl/jest": "14.5.4",
@@ -103,31 +102,30 @@
     "@nrwl/node": "14.5.4",
     "@nrwl/nx-cloud": "14.5.4",
     "@nrwl/workspace": "14.5.4",
-    "@nx-go/nx-go": "^2.6.0",
+    "@nx-go/nx-go": "^2.7.0",
     "@nx-plus/docusaurus": "^14.1.0",
-    "@types/bluebird": "^3.5.36",
+    "@types/bluebird": "^3.5.38",
     "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
     "@types/escape-html": "^1.0.2",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/fast-levenshtein": "^0.0.2",
     "@types/flat": "^5.0.2",
     "@types/jest": "27.4.1",
     "@types/js-yaml": "^4.0.5",
     "@types/json-schema": "^7.0.11",
-    "@types/node": "18.6.4",
-    "@types/safe-regex": "^1.1.3",
+    "@types/node": "^18.11.10",
+    "@types/safe-regex": "^1.1.4",
     "@types/safe-timers": "^1.1.0",
-    "@types/semver": "^7.3.10",
-    "@types/uuid": "^8.3.4",
-    "@types/yargs": "^17.0.11",
+    "@types/semver": "^7.3.13",
+    "@types/yargs": "^17.0.15",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "eslint": "8.21.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
-    "json-schema-to-typescript": "^11.0.1",
+    "json-schema-to-typescript": "^11.0.2",
     "nx": "14.5.4",
     "prettier": "2.7.1",
     "prisma": "^4.7.0",
